<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_daysLeft"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:text="@string/txt_zero"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_daysLeft"
        android:text="@string/txt_daysLeftLabel"
        android:id="@+id/txt_daysLeftLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_budgetPerWeek"
        android:layout_below="@+id/txt_daysLeftLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:text="@string/txt_zero"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_budgetPerWeek"
        android:text="@string/txt_budgetPerWeekLabel"
        android:layout_alignParentRight="true"/>

    <TextView android:text="@string/txt_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="80sp"
        android:textStyle="normal"
        android:id="@+id/txt_balance"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/txt_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_transMean"/>

    <TextView android:text="@string/label_transMean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_transMean"
        android:layout_centerHorizontal="false"
        android:id="@+id/txt_labelTransMean"/>

    <EditText
        android:layout_width="235dp"
        android:textSize="40sp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_zero"
        android:gravity="end"
        android:id="@+id/edt_income"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:layout_toLeftOf="@+id/btn_sub"
        android:layout_toStartOf="@+id/btn_sub"
        android:layout_alignParentBottom="true"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_add"
        android:textSize="40sp"
        android:id="@+id/btn_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="add_amount"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_sub"
        android:textSize="40sp"
        android:id="@+id/btn_sub"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btn_add"
        android:layout_toStartOf="@+id/btn_add"
        android:onClick="sub_amount"
        />

</RelativeLayout>
